--- a/project1.lpi
+++ b/project1.lpi
@@ -31,12 +31,12 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="9">
+    <Units Count="11">
       <Unit0>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="project1"/>
-        <UsageCount Value="29"/>
+        <UsageCount Value="30"/>
       </Unit0>
       <Unit1>
         <Filename Value="MainUI.pas"/>
@@ -47,16 +47,16 @@
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="0"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="338"/>
-        <CursorPos X="65" Y="362"/>
-        <UsageCount Value="29"/>
+        <TopLine Value="73"/>
+        <CursorPos X="25" Y="98"/>
+        <UsageCount Value="30"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="../../Projects/lazarus_svn/lcl/controls.pp"/>
         <UnitName Value="Controls"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="5"/>
         <WindowIndex Value="0"/>
         <TopLine Value="126"/>
         <CursorPos X="3" Y="144"/>
@@ -73,7 +73,7 @@
       <Unit4>
         <Filename Value="../selector/selector.pas"/>
         <UnitName Value="selector"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="7"/>
         <WindowIndex Value="0"/>
         <TopLine Value="34"/>
         <CursorPos X="18" Y="53"/>
@@ -83,10 +83,10 @@
       <Unit5>
         <Filename Value="../../Projects/lazarus_svn/lcl/forms.pp"/>
         <UnitName Value="Forms"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="4"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="137"/>
-        <CursorPos X="3" Y="155"/>
+        <TopLine Value="63"/>
+        <CursorPos X="35" Y="81"/>
         <UsageCount Value="14"/>
         <Loaded Value="True"/>
       </Unit5>
@@ -94,154 +94,173 @@
         <Filename Value="../leptonica/leptonica.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="leptonica"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="2"/>
         <WindowIndex Value="0"/>
         <TopLine Value="67"/>
         <CursorPos X="1" Y="1"/>
-        <UsageCount Value="27"/>
+        <UsageCount Value="28"/>
         <Loaded Value="True"/>
       </Unit6>
       <Unit7>
         <Filename Value="../leptonica/LibLeptUtils.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="LibLeptUtils"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="3"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
         <CursorPos X="40" Y="10"/>
-        <UsageCount Value="27"/>
+        <UsageCount Value="28"/>
         <Loaded Value="True"/>
       </Unit7>
       <Unit8>
         <Filename Value="../../Projects/lazarus_svn/lcl/include/customcontrol.inc"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="6"/>
         <WindowIndex Value="0"/>
         <TopLine Value="102"/>
         <CursorPos X="3" Y="111"/>
         <UsageCount Value="10"/>
         <Loaded Value="True"/>
       </Unit8>
+      <Unit9>
+        <Filename Value="pageviewer.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="pageviewer"/>
+        <EditorIndex Value="1"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="1"/>
+        <CursorPos X="28" Y="8"/>
+        <UsageCount Value="21"/>
+        <Loaded Value="True"/>
+      </Unit9>
+      <Unit10>
+        <Filename Value="../../Projects/lazarus_svn/lcl/stdctrls.pp"/>
+        <UnitName Value="StdCtrls"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="103"/>
+        <CursorPos X="3" Y="121"/>
+        <UsageCount Value="10"/>
+      </Unit10>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="112" Column="20" TopLine="107"/>
+        <Caret Line="39" Column="28" TopLine="16"/>
       </Position1>
       <Position2>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="123" Column="17" TopLine="108"/>
+        <Caret Line="262" Column="3" TopLine="260"/>
       </Position2>
       <Position3>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="268" Column="30" TopLine="257"/>
+        <Caret Line="264" Column="3" TopLine="262"/>
       </Position3>
       <Position4>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="181" Column="1" TopLine="45"/>
+        <Caret Line="21" Column="17" TopLine="1"/>
       </Position4>
       <Position5>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="183" Column="1" TopLine="148"/>
+        <Caret Line="180" Column="55" TopLine="160"/>
       </Position5>
       <Position6>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="38" Column="25" TopLine="17"/>
+        <Caret Line="186" Column="4" TopLine="168"/>
       </Position6>
       <Position7>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="278" Column="48" TopLine="267"/>
+        <Caret Line="201" Column="28" TopLine="183"/>
       </Position7>
       <Position8>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="265" Column="12" TopLine="237"/>
+        <Caret Line="207" Column="66" TopLine="183"/>
       </Position8>
       <Position9>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="39" Column="28" TopLine="16"/>
+        <Caret Line="17" Column="33" TopLine="14"/>
       </Position9>
       <Position10>
-        <Filename Value="MainUI.pas"/>
-        <Caret Line="262" Column="3" TopLine="260"/>
+        <Filename Value="../../Projects/lazarus_svn/lcl/controls.pp"/>
+        <Caret Line="1992" Column="33" TopLine="1980"/>
       </Position10>
       <Position11>
-        <Filename Value="MainUI.pas"/>
-        <Caret Line="264" Column="3" TopLine="262"/>
+        <Filename Value="../../Projects/lazarus_svn/lcl/controls.pp"/>
+        <Caret Line="1634" Column="27" TopLine="1616"/>
       </Position11>
       <Position12>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="21" Column="17" TopLine="1"/>
+        <Caret Line="47" Column="20" TopLine="37"/>
       </Position12>
       <Position13>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="180" Column="55" TopLine="160"/>
+        <Caret Line="56" Column="1" TopLine="31"/>
       </Position13>
       <Position14>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="186" Column="4" TopLine="168"/>
+        <Caret Line="60" Column="1" TopLine="40"/>
       </Position14>
       <Position15>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="201" Column="28" TopLine="183"/>
+        <Caret Line="297" Column="14" TopLine="279"/>
       </Position15>
       <Position16>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="207" Column="66" TopLine="183"/>
+        <Caret Line="294" Column="49" TopLine="279"/>
       </Position16>
       <Position17>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="17" Column="33" TopLine="14"/>
+        <Caret Line="310" Column="35" TopLine="306"/>
       </Position17>
       <Position18>
-        <Filename Value="../../Projects/lazarus_svn/lcl/controls.pp"/>
-        <Caret Line="1992" Column="33" TopLine="1980"/>
+        <Filename Value="MainUI.pas"/>
+        <Caret Line="22" Column="7" TopLine="9"/>
       </Position18>
       <Position19>
-        <Filename Value="../../Projects/lazarus_svn/lcl/controls.pp"/>
-        <Caret Line="1634" Column="27" TopLine="1616"/>
+        <Filename Value="MainUI.pas"/>
+        <Caret Line="217" Column="43" TopLine="199"/>
       </Position19>
       <Position20>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="47" Column="20" TopLine="37"/>
+        <Caret Line="211" Column="17" TopLine="199"/>
       </Position20>
       <Position21>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="56" Column="1" TopLine="31"/>
+        <Caret Line="363" Column="65" TopLine="339"/>
       </Position21>
       <Position22>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="60" Column="1" TopLine="40"/>
+        <Caret Line="362" Column="65" TopLine="338"/>
       </Position22>
       <Position23>
-        <Filename Value="MainUI.pas"/>
-        <Caret Line="297" Column="14" TopLine="279"/>
+        <Filename Value="pageviewer.pas"/>
+        <Caret Line="3" Column="1" TopLine="1"/>
       </Position23>
       <Position24>
-        <Filename Value="MainUI.pas"/>
-        <Caret Line="294" Column="49" TopLine="279"/>
+        <Filename Value="pageviewer.pas"/>
+        <Caret Line="10" Column="5" TopLine="45"/>
       </Position24>
       <Position25>
-        <Filename Value="MainUI.pas"/>
-        <Caret Line="310" Column="35" TopLine="306"/>
+        <Filename Value="pageviewer.pas"/>
+        <Caret Line="8" Column="41" TopLine="1"/>
       </Position25>
       <Position26>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="22" Column="7" TopLine="9"/>
+        <Caret Line="18" Column="43" TopLine="1"/>
       </Position26>
       <Position27>
-        <Filename Value="MainUI.pas"/>
-        <Caret Line="217" Column="43" TopLine="199"/>
+        <Filename Value="pageviewer.pas"/>
+        <Caret Line="8" Column="35" TopLine="1"/>
       </Position27>
       <Position28>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="211" Column="17" TopLine="199"/>
+        <Caret Line="18" Column="38" TopLine="1"/>
       </Position28>
       <Position29>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="363" Column="65" TopLine="339"/>
+        <Caret Line="58" Column="25" TopLine="40"/>
       </Position29>
       <Position30>
         <Filename Value="MainUI.pas"/>
-        <Caret Line="362" Column="65" TopLine="338"/>
+        <Caret Line="97" Column="25" TopLine="72"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
